--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ body {
   }
   .conteiner {
     width: 90vmin;
-    height: 115vmin;
+    height: 120vmin;
   }
+  .game {
+  font-size: 20px;
+  padding: 5px;
+
+}
 }
